[package]
name = "batch-rename"
version = "0.1.0"
edition = "2024"
description = "批量重命名指定目录下的文件"

[dependencies]
clap = { version = "^4", features = ["derive"] }
regex = "^1"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.